--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
   },
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "express-handlebars": "^6.0.2",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.15.6",
     "flash-messenger": "^1.1.1",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.20.1"
   },
   "repository": {
     "type": "git",
