--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "flash-messenger": "^1.1.1",
     "handlebars": "^4.7.7",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
