--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^6.0.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.15.6",
+    "express-validator": "^6.14.2",
     "flash-messenger": "^1.1.1",
     "handlebars": "^4.7.7",
     "moment": "^2.29.3",
