newsletter using SendGrid

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PORT = 3306
 DB_NAME = 'healinginc'
 DB_USER = 'IT2155'
 DB_PWD = 'P@ssw0rd'
+
+# newsletter:
+SENDGRID_API_KEY = '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'
