--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "@sendgrid/client": "^7.7.0",
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "datalize": "^0.3.4",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.16.4",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.15.6",
