--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+DB_HOST = 'localhost'
+DB_PORT = 3306
 DB_NAME = 'healinginc'
 DB_USER = 'IT2155'
 DB_PWD = 'P@ssw0rd'
@@ -9,8 +11,6 @@ APP_SECRET ='QI2jTIdbrs'
 
 # newsletter:
 SENDGRID_API_KEY = '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'
-# verify acc email
-SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
-SENDGRID_API_KEY = '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'
+
 # verify acc email
 SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
