--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
-    "sequelize": "^6.21.1"
+    "sequelize": "^6.21.1",
+    "summernote": "^0.8.20"
   },
   "repository": {
     "type": "git",
