--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_NAME = 'healinginc'
 DB_USER = 'IT2155'
-# DB_PWD = 'Wzyjotham0307'
-DB_PWD = 'P@ssw0rd'
+DB_PWD = 'Wzyjotham0307'
+# DB_PWD = 'P@ssw0rd'
 BASE_URL = 'http://localhost'
 
 DB_RESET = 0
