--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
     "@sendgrid/client": "^7.7.0",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "csvtojson": "^2.0.10",
     "datalize": "^0.3.4",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.16.4",
+    "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.15.6",
     "express-validator": "^6.14.2",
+    "fast-csv": "^4.3.6",
     "flash-messenger": "^1.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
