api fix rmb pull natthidas when she figure out

--- a/.env
+++ b/.env
@@ -8,9 +8,12 @@ PORT = 5000
 APP_SECRET ='QI2jTIdbrs'
 
 # newsletter:
-SENDGRID_API_KEY = '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'
-# verify acc email
-SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
-SENDGRID_API_KEY = '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'
-# verify acc email
-SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
+# SENDGRID_API_KEY = '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'
+# # verify acc email
+# SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
+# SENDGRID_API_KEY = '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'
+# # verify acc email
+# SENDGRID_SENDER_EMAIL = 'thehealinginctester@gmail.com'
+
+SENDGRID_API_KEY = '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'
+SENDGRID_SENDER_EMAIL = 'limmeiling108@gmail.com'
